Add recruiter account management
